# datasette-plotly

./: README.md  pyproject.toml
datasette_plotly/: __init__.py
datasette_plotly/static/: main.css  main.js
tests/: test_plotly.py
