[project]
name = "datasette-plotly"
version = "0.1"
description = "Datasette plugin for making charts from tables and SQL queries using Plotly.js"
readme = "README.md"
authors = [{name = "Witold Czarnecki"}]
license = {text = "Apache-2.0"}
classifiers=[
    "Framework :: Datasette",
    "License :: OSI Approved :: Apache Software License"
]
requires-python = ">=3.9"
dependencies = [
    "datasette"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/commongeek/datasette-plotly"
Changelog = "https://github.com/commongeek/datasette-plotly/releases"
Issues = "https://github.com/commongeek/datasette-plotly/issues"
CI = "https://github.com/commongeek/datasette-plotly/actions"

[project.entry-points.datasette]
plotly = "datasette_plotly"

[project.optional-dependencies]
test = ["pytest", "pytest-asyncio"]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.setuptools.package-data]
datasette_plotly = ["static/*"]
